--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-java@v3
         with: 
           java-version: '17'
-          distributions: 'liberica'
+          distribution: 'liberica'
           cache: gradle
 
       - name: Build app jar
