--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -12,12 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Java and Gradle
+      - name: Setup Java
         uses: actions/setup-java@v3
         with: 
           java-version: '17'
           distribution: 'liberica'
-          cache: gradle
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.2
 
       - name: Build app jar
         run: gradle bootJar
