added flux kustomization

--- a/clusters/dev/jmix-lab-source.yaml
+++ b/clusters/dev/jmix-lab-source.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
+  secretRef:
+    name: github-repo-cred
   ref:
     branch: main
   url: https://github.com/dgodlevskiy/jmix-lab
