--- a/clusters/dev/jmix-lab-secret.yaml
+++ b/clusters/dev/jmix-lab-secret.yaml
@@ -1,7 +1,9 @@
+---
 apiVersion: v1
 kind: Secret
-type: Opaque
 metadata:
-  name: github-repo-cred
-data:
+  name: jmix-lab
+  namespace: flux-system
+stringData:
   bearerToken: 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
+
