--- a/infra/dev/kustomize/deployment.yaml
+++ b/infra/dev/kustomize/deployment.yaml
@@ -19,3 +19,5 @@ spec:
         image: warhammster.jfrog.io/wh-docker/jmix-lab:latest
         ports:
         - containerPort: 8080
+      imagePullSecrets:
+        - name: regcred
