--- a/infra/dev/kustomize/service.yaml
+++ b/infra/dev/kustomize/service.yaml
@@ -1,1 +1,12 @@
- 
+apiVersion: v1
+kind: Service
+metadata:
+  name: jmix-lab
+spec:
+  type: LoadBalancer
+  selector:
+    app: jmix-lab
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
