Changed app properties for db

--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/lab
-main.datasource.username = sa
-main.datasource.password =
+main.datasource.url = jdbc:postgresql://${CRM_DB_HOST:localhost}/jmix-lab
+main.datasource.username = ${CRM_DB_USERNAME:postgres}
+main.datasource.password = ${CRM_DB_PASSWORD:postgres}
 
 main.liquibase.change-log=dev/warhammster/jmixlab/liquibase/changelog.xml
 
