--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,4 +1,4 @@
-FROM bellsoft/liberica-openjdk-alpine:17 as builder
+FROM eclipse-temurin:17 as builder
 
 ARG jmix_premium_user
 ARG jmix_premium_pass
@@ -14,10 +14,10 @@ COPY ./src ./src
 COPY gradlew gradlew
 COPY build.gradle build.gradle
 COPY settings.gradle settings.gradle
-RUN chmod +x ./gradlew
+RUN chmod +x gradlew
 RUN ./gradlew -Pvaadin.productionMode=true bootJar
 
-FROM bellsoft/liberica-openjdk-alpine:17
+FROM eclipse-temurin:17
 ARG JAR_FILE=build/libs/jmix-lab-0.0.1-SNAPSHOT.jar
 COPY --from=builder /opt/app/build/libs/jmix-lab-0.0.1-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
