--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -12,19 +12,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: warhammster.jfrog.io
-          username: ${{ secrets.JF_USERNAME }}
-          password: ${{ secrets.JF_ACCESS_TOKEN }}
-
-      - name: Build and push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          context: ./code
-          build-args: |
-            jmix_premium_user=${{ secrets.JMIX_PREMIUM_REPO_USER }}
-            jmix_premium_pass=${{ secrets.JMIX_PREMIUM_REPO_PASS }}
-          tags: warhammster.jfrog.io/wh-docker/lab:latest
+      - name: Build dev
+        run: echo 'Building and deploying to dev'
