--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   pull-publish-qa:
     runs-on: ubuntu-latest
+    environment: qa
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,6 +21,7 @@ jobs:
   
   promote-stage:
     runs-on: ubuntu-latest
+    environment: stage
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,6 +34,7 @@ jobs:
   
   promote-prod:
     runs-on: ubuntu-latest
+    environment: prod
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
