--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check version
+        uses: echo "${{ GITHUB_HEAD_REF }}"
+
       - name: Pull from dev registery
         run: echo 'Pull from dev registery'
 
