--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check version
-        run: echo "${{ GITHUB_HEAD_REF }}"
+        run: echo "${{ github.ref }}"
 
       - name: Pull from dev registery
         run: echo 'Pull from dev registery'
