--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check version
-        run: echo "${{ github.ref_name }}"
+        run: echo "${{github.ref_name}:8}"
 
       - name: Pull from dev registery
         run: echo 'Pull from dev registery'
