--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check version
-        run: echo "${GITHUB_REF_NAME#release/}.${{ github.run_number }}"
+        run:  | 
+          echo "RELEASE_VERSION=${GITHUB_REF_NAME#release/}.${{ github.run_number }}" >> $GITHUB_ENV
+          echo "Release version: $RELEASE_VERSION"
 
       - name: Pull from dev registery
         run: echo 'Pull from dev registery'
