--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -15,7 +15,8 @@ jobs:
 
       - name: Check version
         run:  | 
-          echo "RELEASE_VERSION=${GITHUB_REF_NAME#release/}.${{ github.run_number }}" >> $GITHUB_ENV
+          releaseVersion=${GITHUB_REF_NAME#release/}.${{ github.run_number }}
+          echo "RELEASE_VERSION=releaseVersion" >> $GITHUB_ENV
           echo "Release version: $RELEASE_VERSION"
 
       - name: Pull from dev registery
