--- a/.github/workflows/build-publish-dev.yml
+++ b/.github/workflows/build-publish-dev.yml
@@ -38,6 +38,6 @@ jobs:
       - name: Create git tag
         run: |
           git config user.name "GitHub Actions"
-          git config user.email "github-actions@users.noreply.github.com"
+          git config user.email "dgodlevskiy@haulmont.com"
           git tag ${{ steps.tag.outputs.tag }}
           git push origin ${{ steps.tag.outputs.tag }}
