--- a/.github/workflows/build-publish-dev.yml
+++ b/.github/workflows/build-publish-dev.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
@@ -38,6 +38,6 @@ jobs:
       - name: Create git tag
         run: |
           git config user.name "GitHub Actions"
-          git config user.email "dgodlevskiy@haulmont.com"
+          git config user.email "github-actions@your-username@users.noreply.github.com"
           git tag ${{ steps.tag.outputs.tag }}
           git push origin ${{ steps.tag.outputs.tag }}
