--- a/.github/workflows/build-publish-dev.yml
+++ b/.github/workflows/build-publish-dev.yml
@@ -39,5 +39,5 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github-actions@your-username@users.noreply.github.com"
-          git tag ${{ steps.tag.outputs.tag }}
+          git tag -a ${{ steps.tag.outputs.tag }}
           git push origin ${{ steps.tag.outputs.tag }}
