--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -24,6 +24,8 @@ jobs:
           TAG="qa-$SHORT_SHA-${{ github.run_number }}"
           echo "Tag: $TAG"
 
+          git tag
+
           TAG_SOURCE=$(git tag -l dev-*)
           echo "Source tag: $TAG_SOURCE"
           
