--- a/.github/workflows/promote-tag.yaml
+++ b/.github/workflows/promote-tag.yaml
@@ -26,6 +26,8 @@ jobs:
           TAG="qa-$SHORT_SHA-${{ github.run_number }}"
           echo "Tag: $TAG"
 
+          git tag --points-at ${{ github.sha }} -l dev-*
+
           TAG_SOURCE=$(git tag --points-at ${{ github.sha }} -l dev-*)
           echo "Source tag: $TAG_SOURCE"
           
